--- a/src/main/resources/com/example/projeto2_desktop/AgendamentoDayView.fxml
+++ b/src/main/resources/com/example/projeto2_desktop/AgendamentoDayView.fxml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -8,47 +10,85 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="667.0" prefWidth="789.0" style="-fx-background-color: #FFF;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.Agendamento.AgendamentoDayController">
+<AnchorPane prefHeight="700.0" prefWidth="800.0" style="-fx-background-color: #FFF;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.Agendamento.AgendamentoDayController">
    <children>
-      <ScrollPane fx:id="scroll" layoutX="101.0" layoutY="117.0" prefHeight="541.0" prefWidth="1014.0">
-         <content>
-            <VBox fx:id="vBox" alignment="TOP_CENTER" prefHeight="530.0" prefWidth="1014.0" />
-         </content>
-      </ScrollPane>
-      <Label layoutX="472.0" layoutY="15.0" prefHeight="31.0" prefWidth="168.0" text="Agendamentos -">
-         <font>
-            <Font name="System Bold" size="21.0" />
-         </font>
-      </Label>
-      <Label fx:id="data" layoutX="650.0" layoutY="15.0" prefHeight="31.0" prefWidth="107.0" />
-      <HBox alignment="BOTTOM_CENTER" focusTraversable="true" layoutY="54.0" prefHeight="62.0" prefWidth="1232.0">
+      <VBox prefHeight="700.0" prefWidth="1200.0">
          <children>
-            <Label text="Titular">
-               <HBox.margin>
-                  <Insets left="100.0" right="175.0" />
-               </HBox.margin>
-            </Label>
-            <Label text="Embarcação">
-               <HBox.margin>
-                  <Insets left="10.0" right="100.0" />
-               </HBox.margin>
-            </Label>
-            <Label text="Hora Inicio">
-               <HBox.margin>
-                  <Insets left="10.0" right="100.0" />
-               </HBox.margin>
-            </Label>
-            <Label text="Hora Fim">
-               <HBox.margin>
-                  <Insets left="60.0" right="50.0" />
-               </HBox.margin>
-            </Label>
-            <Label text="Ações">
-               <HBox.margin>
-                  <Insets left="130.0" right="100.0" />
-               </HBox.margin>
-            </Label>
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <Label text="Agendamentos - ">
+                     <font>
+                        <Font name="System Bold" size="24.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="data" text="Label">
+                     <font>
+                        <Font name="System Bold" size="24.0" />
+                     </font>
+                  </Label>
+               </children>
+            </HBox>
+            <HBox alignment="CENTER_LEFT" prefHeight="39.0" prefWidth="1200.0">
+               <children>
+                  <Label fx:id="nomeText1" prefHeight="20.0" prefWidth="202.0" text="Titular">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="embarcacaoText1" prefHeight="20.0" prefWidth="174.0" text="Emabarcacao">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="HoraInicioText1" prefHeight="20.0" prefWidth="104.0" text="HoraInicio">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="horaFimText1" prefHeight="20.0" prefWidth="124.0" text="HoraFim">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <Label prefHeight="20.0" prefWidth="163.0" text="Estado">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="817.0" layoutY="24.0" prefHeight="20.0" prefWidth="77.0" text="Ações">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+               </children>
+               <padding>
+                  <Insets left="183.0" />
+               </padding></HBox>
+            <HBox alignment="CENTER" prefHeight="566.0" prefWidth="800.0" style="-fx-background-color: #FFFF;">
+               <children>
+                  <ScrollPane fx:id="scroll" prefHeight="566.0" prefWidth="1000.0">
+                    <content>
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="539.0" prefWidth="1002.0" style="-fx-background-color: #FFFF;">
+                           <children>
+                              <VBox fx:id="vBox" alignment="TOP_CENTER" prefHeight="538.0" prefWidth="1000.0" style="-fx-background-color: #FFFF;" />
+                           </children>
+                        </AnchorPane>
+                    </content>
+                  </ScrollPane>
+               </children>
+            </HBox>
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <Button mnemonicParsing="false" onAction="#closeWindow" stylesheets="@../../../CSS/Marine.css" text="Voltar">
+                     <font>
+                        <Font size="21.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor></Button>
+               </children>
+            </HBox>
          </children>
-      </HBox>
+      </VBox>
    </children>
 </AnchorPane>
