--- a/src/main/resources/com/example/projeto2_desktop/AgendamentoItemView.fxml
+++ b/src/main/resources/com/example/projeto2_desktop/AgendamentoItemView.fxml
@@ -6,29 +6,50 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.text.Font?>
 
 <HBox alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="900.0" style="-fx-border-radius: 10; -fx-border-color: #29296b; -fx-background-radius: 100;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.Agendamento.AgendamentoItemController">
    <children>
       <Label fx:id="idText" layoutX="36.0" layoutY="26.0" text="SIUU" visible="false" />
-      <Label fx:id="nomeText" prefWidth="200.0" text="SIUU">
+      <Label fx:id="nomeText" prefWidth="200.0" text="Titular">
          <HBox.margin>
             <Insets left="25.0" right="25.0" />
          </HBox.margin>
+         <font>
+            <Font size="14.0" />
+         </font>
       </Label>
-      <Label fx:id="embarcacaoText" prefHeight="18.0" prefWidth="200.0" text="Label">
+      <Label fx:id="embarcacaoText" prefHeight="20.0" prefWidth="173.0" text="Emabarcacao">
          <HBox.margin>
             <Insets right="25.0" />
          </HBox.margin>
+         <font>
+            <Font size="14.0" />
+         </font>
       </Label>
-      <Label fx:id="HoraInicioText" prefWidth="100.0" text="Label">
+      <Label fx:id="HoraInicioText" prefWidth="100.0" text="HoraInicio">
          <HBox.margin>
             <Insets right="25.0" />
          </HBox.margin>
+         <font>
+            <Font size="14.0" />
+         </font>
       </Label>
-      <Label fx:id="horaFimText" prefWidth="100.0" text="Label">
+      <Label fx:id="horaFimText" prefWidth="100.0" text="HoraFim">
          <HBox.margin>
-            <Insets right="100.0" />
+            <Insets right="50.0" />
          </HBox.margin>
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <Label fx:id="estadoText" prefHeight="20.0" prefWidth="101.0" text="Estado">
+         <HBox.margin>
+            <Insets right="50.0" />
+         </HBox.margin>
+         <font>
+            <Font size="14.0" />
+         </font>
       </Label>
       <ImageView fitHeight="40.0" fitWidth="40.0" onMouseClicked="#editCliente" pickOnBounds="true" preserveRatio="true">
          <HBox.margin>
